Refactor sections and short explanations and summaries (#1)
* WIP: improving sections with explanations and short summaries

* Finish improving and adding explanations for Spring Core, Data Management and Spring MVC

* Fix typos in Spring MVC chapter

* Add missing @ResponseStatus to Spring MVC

* Add improvements for Testin chapter

* Add improvements and explanations for Security chapter

* Update README.md with exam identifier and link to the exam registration

* Add improvements and explanations for Spring Boot chapter

* Remove exam guide

--- a/2. Data Management/2.4 Spring Data.md
+++ b/2. Data Management/2.4 Spring Data.md
@@ -13,55 +13,71 @@
 
 
 ## Core Concepts
-- `@Repository`
-- `CrudRepository`
-- `PagingAndSortingRepository`
-- `@EnableJpaRepositories`
-- `@Query` + query generation
+- `EntityManagerFactoryBean`: factory to create and configure a standard JPA `EntityManagerFactory`
+- `JpaTransactionManager`: manages JPA transactions
+- `spring.jpa.*`: properties for Spring Data JPA
+- JPA Entity Mapping
+- Repositories
+- Derived Query Methods
 
-### [Query Method Subject Keywords](https://docs.spring.io/spring-data/jpa/reference/repositories/query-keywords-reference.html#appendix.query.method.subject)
-- `find...By`, `read...By`, `get...By`, `query...By`, `search...By`, `stream...By`
-- `exists...By`
-- `count...By`
-- `delete...By`, `remove...By`
-- `...First<number>...`, `...Top<number>...`
-- `...Distinct...`
+### JPA Entity Mapping
+- `@EntityScan`: enable entity scanning for `@Entity` classes in a specific package
+- `@Entity`: marks a class as a JPA entity
+- `@Table`: specifies the database table mapped to the entity, like specifying the table name and schema
+- `@Id`: marks a field as the primary key of the entity
+- `@GeneratedValue`: specifies how the primary key should be automatically generated
+- `@Column`: maps a field to a specific database column and allows customizing the columns properties (name, length, nullable, etc.)
+- `@OneToOne`: defines a one-to-one relationship between two entities
+- `@OneToMany`: defines a one-to-many relationship between two entities
+- `@ManyToMany`: defines a many-to-many relationship between two entities
 
-### [Query Method Predicate Keywords and modifiers](https://docs.spring.io/spring-data/jpa/reference/repositories/query-keywords-reference.html#appendix.query.method.predicate)
+### Repositories
+- `@EnableJpaRepositories`: enables scanning of Spring Data JPA repository interfaces
+- `@Repository`: stereotype annotation for data access objects
+- `Repository<T, PK>`: marker interface for all Spring Data repositories
+- `CrudRepository<T, PK>`: provides basic CRUD operations (save, findById, delete, etc.)
+- `PagingAndSortingRepository<T, PK>`: additionally provides methods for pagination and sorting
+- `@Query`: declares a custom JPQL or native SQL query
+- `Sort`: define sorting criteria for queries
+- `Pageable`: pagination information including page number, size and optional sorting
+
+### Derived Query Methods
+
+##### [Query Method Subject Keywords](https://docs.spring.io/spring-data/jpa/reference/repositories/query-keywords-reference.html#appendix.query.method.subject)
+- `find|read|get|query|search|stream...By`: return all records that match the given query
+- `exists...By`: returns a `boolean` indication whether at least one record matches the given query
+- `count...By`: returns the number of records that match the given query
+- `delete|remove...By`: deletes all entities that match the given query
+- `...First|Top<N>...` (`<N>` is optional and `= 1` if missing): limits the result to the first/top N elements
+- `...Distinct...`: ensures that the query returns distinct results
+
+##### [Query Method Predicate Keywords and modifiers](https://docs.spring.io/spring-data/jpa/reference/repositories/query-keywords-reference.html#appendix.query.method.predicate)
 - `And`, `Or`
-- `After`/`IsAfter`, `Before`/`IsBefore`
-- `Containing`/`IsContaining`/`Contains`
-- `Between`/`IsBetween`
-- `EndingWith`/`IsEndingWith`/`EndsWith`
+- `(Is)After`, `(Is)Before`
+- `(Is)Between`
+- `(Is)EndingWith`/`EndsWith`, `(Is)StartingWith`/`StartsWith`
+- `(Is)Containing`/`Contains`
 - `Exists`
-- `False`/`IsFalse`
-- `GreaterThan`/`IsGreaterThan`
-- `In`/`IsIn`
-- `Is`/`Equals`/(no keyword)
-- `IsEmpty`/`Empty`
-- `IsNotEmpty`/`NotEmpty`
-- `NotNull`/`IsNotNull`
-- `Null`/`IsNull`
-- `LessThan`/`IsLessThan`
-- `LessThanEqual`/`IsLessThanEqual`
-- `Like`/`IsLike`
-- `Near`/`IsNear`
-- `Not`/`IsNot`
-- `NotIn`/`IsNotIn`
-- `NotLike`/`IsNotLike`
-- `Regex`/`MatchesRegex`/`Matches`
-- `StartingWith`/`IsStartingWith`/`StartsWith`
-- `True`/`IsTrue`
-- `Within`/`IsWithin`
+- `(IsTrue)`, `(Is)False`
+- `(Is)GreaterThan`, `(Is)LessThan`
+- `(Is)GreaterThanEqual`, `(Is)LessThanEqual`
+- `Is`/`Equals`/(no keyword), `(Is)Not`
+- `(Is)In`, `(Is)NotIn`
+- `(Is)Empty`, `(Is)NotEmpty`
+- `(Is)NotNull`, `(Is)Null`
+- `(Is)Like`, `(Is)NotLike`
+- `(Is)Near`
+- `(Matches)Regex`/`Matches`
+- `(Is)Within`
 - `IgnoreCase`/`IgnoringCase`
 - `AllIgnoreCase`/`AllIgnoringCase`
 - `OrderBy...`
 
-### [Query Method Return Types](https://docs.spring.io/spring-data/jpa/reference/repositories/query-return-types-reference.html)
+##### [Query Method Return Types](https://docs.spring.io/spring-data/jpa/reference/repositories/query-return-types-reference.html)
 - `void`
 - Primitives
 - Wrapper Types
-- `T`
+- `<T>`
 - `Iterator<T>`
 - `Collection<T>`
 - `List<T>`
