--- a/6. Spring Boot/6. Spring Boot.md
+++ b/6. Spring Boot/6. Spring Boot.md
@@ -14,7 +14,8 @@
    4. [Logging](https://docs.spring.io/spring-boot/reference/features/logging.html)
    5. [Aspect-Oriented Programming](https://docs.spring.io/spring-boot/reference/features/aop.html)
    6. [JSON](https://docs.spring.io/spring-boot/reference/features/json.html)
-   7. [Condition Annotation](https://docs.spring.io/spring-boot/reference/features/developing-auto-configuration.html#features.developing-auto-configuration.condition-annotations)
+   7. [Configuration Order](https://docs.spring.io/spring-boot/reference/features/developing-auto-configuration.html#features.developing-auto-configuration.locating-auto-configuration-candidates)
+   8. [Condition Annotation](https://docs.spring.io/spring-boot/reference/features/developing-auto-configuration.html#features.developing-auto-configuration.condition-annotations)
 4. [Web](https://docs.spring.io/spring-boot/reference/web/index.html)
    1. [Servlet Web Applications](https://docs.spring.io/spring-boot/reference/web/servlet.html)
    2. [Spring Security](https://docs.spring.io/spring-boot/reference/web/spring-security.html)
@@ -28,24 +29,53 @@
 
 
 ## Core Concepts
-- Starters
-- `@SpringBootApplication`
-- `SpringApplication`
+- Opinionated view of Spring
+- Starter Dependencies
 - Auto-Configuration
-- `@EnableAutoConfiguration`
-- Configuration and Precedence
-- Condition Annotation
+- Properties
+- Conditional Configuration
+- Command-line Runners
+- Spring Boot Actuator
 
-### Integration
-- Profiles
-- Logging
-- Aspect-Oriented Programming
-- JSON
-- Web
-- Data (SQL)
-- Testing
+### Auto-Configuration
+- `@EnableAutoConfiguration`: triggers spring boot's autoconfiguration
+- `@SpringBootConfiguration`: specialized from of `@Configuration` for defining the primary Spring Boot config class
+- `@SpringBootApplication`: meta-annotation combining `@SpringBootConfiguration`, `@EnableAutoConfiguration` and `@ComponentScan`
 
-### Condition Annotation
+### Properties
+
+##### File types
+- `application.properties`
+- `application.yml`
+- `application-{profile}.properties`: profile-specific properties
+
+##### File location
+1. `/config` subdirectory of working directory
+2. working directory
+3. `config` package in the classpath
+4. classpath root
+
+##### Property Precedence
+1. Devtools settings
+2. `@TestPropertySource`/`@SpringBootTest`
+3. Command line arguments
+4. `SPRING_APPLICATION_JSON`
+5. Servlet config/context parameters
+6. JNDI attributes
+7. Java system properties
+8. OS environment variables
+9. `application-{profile}.properties`
+10. `application.properties`/`application.yml`
+11. `@PropertySource`
+12. `SpringApplication.setDefaultProperties`
+
+##### Binding Properties
+- `@ConfigurationProperties`: binds a class to a property prefix
+- `@EnableConfigurationProperties`: enables classes annotated with `@ConfigurationProperties`
+- `@ConfigurationPropertiesScan`: scans for `@ConfigurationProperties` beans automatically
+
+### Conditional Configuration
+- `@Conditional`: indicates that a component is only eligible for registration when all conditions match
 - `@ConditionalOnClass`
 - `@ConditionalOnMissingClass`
 - `@ConditionalOnBean`
@@ -55,3 +85,39 @@
 - `@ConditionalOnWebApplication`
 - `@ConditionalOnNotWebApplication`
 - `@ConditionalOnExpression`
+
+### Command-Line Runners
+- `CommandLineRunner`: runs after application startup with command-line arguments as `String[]`
+- `ApplicationRunner`: runs after application startup with command-line arguments as `ApplicationArguments` for structured parsing
+
+### Spring Boot Actuator
+
+##### Common endpoints
+- `/actuator/info`
+- `/actuator/health`
+- `/actuator/metrics`
+- `/actuator/metrics/{name}`
+
+##### Exposure
+- JMX: All endpoints exposed by default
+- HTTP: only `/health` exposed by default
+- `management.endpoints.web.exposure.include`: expose a comma-separated list of endpoints
+- `management.endpoints.web.exposure.exclude`: exclude a comma-separated list of endpoints to be exposed
+
+##### Securing Endpoints
+- `EndpointRequest.to`: returns a base-path agnostic path to match against
+
+##### Custom Metrics
+- `Counter`: incremental metric
+- `Gauge`: tracks real-time value that can increase or decrease
+- `Timer`: records how long a task takes
+- `DistributionSummary`: captures and summarizes numeric data, recording count, total, max and mean
+- `MeterRegistry`: central registry for custom metrics
+- `@Timed`: automatically time method execution
+
+##### Custom Health Indicators
+- `HealthIndicator`: interface used to create custom health checks
+- `AbstractHealthIndicator`: base class that simplifies implementing a `HealthIndicator`
+- `Health`: representing the result of a health check
+- Status Values: `UP`, `DOWN`, `OUT_OF_SERVICE`, `UNKNOWN`
+- `management.endpoint.health.status.order`: customize status ordering
